tests/golden/3-basic-and-simple-literals/invalid/common/bad-explicit-null-literal-3.yini
^ ExplicitNulls
val1 = Nil
